--- a/css/chessboard-1.0.0.css
+++ b/css/chessboard-1.0.0.css
@@ -52,3 +52,32 @@
   top: 2px;
   left: 2px;
 }
+
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 20px;
+  font-weight: 600;
+  font-family: 'Dosis', sans-serif;
+  font-size: 18px;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+
+
+.checkmate {
+  display: none;
+}
+
+.active {
+  display: inline-block;
+}
+
+
+
+
+
+
+
